@@ -41,5 +41,42 @@ java -Xlog:gc*:file=gc.log
 
 ---
 
+## ⚠️ Common Pitfalls
+
+**Pitfall 1: Choosing ZGC without need**
+```text
+// ❌ Switching to ZGC for small heap (<4GB)
+// Overhead with no benefit
+
+// ✅ Use G1GC for most apps, ZGC for large heap + low-latency needs
+```
+
+**Pitfall 2: Not setting -Xms = -Xmx**
+```text
+// ❌ Heap resizes during traffic spikes
+java -Xms1g -Xmx8g
+
+// ✅ Fix heap size to avoid resizing pauses
+java -Xms8g -Xmx8g
+```
+
+**Pitfall 3: Ignoring GC logs**
+```text
+// ❌ No GC logs, blind tuning
+
+// ✅ Enable GC logs and measure
+-Xlog:gc*:file=gc.log
+```
+
+---
+
+## 🛑 When NOT to Use ZGC/Shenandoah
+
+- ❌ Small heaps (<4GB) and low latency requirements
+- ❌ CPU-bound apps where throughput matters more
+- ✅ DO use: Large heaps, strict pause SLAs
+
+---
+
 **Last Updated:** February 22, 2026  
 **Next: [Q42_heap_vs_stack.md](Q42_heap_vs_stack.md)**
